修改第一次

--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
             <div class="row row_title1">
                 <ul>
                     <li class="col-xs-12 col-md-3 col-lg-3 final_foot">
-                        <a href="">
+                        <a href="news.html">
                             <h4 class="ws">概念上钣金与冲压的区别</h4>
                             <p class="ws">对于初次接触钣金加工的人来说，绝大多数的人混淆钣金加工与冲压加工的概念，虽然这两者都有着许多相...</p>
                             <span class="bews-more">MORE</span>
                         </a>
                     </li>
                     <li class="col-xs-12 col-md-3 col-lg-3 final_foot">
-                        <a href="">
+                        <a href="news.html">
                             <h4 class="ws">关于钣金加工工艺的概述</h4>
                             <p class="ws">由此可见，要想做出好的产品也是很不容易的。因为工序较多，而能够覆盖众多工序的工厂又较少，大多......</p>
                             <span class="bews-more">MORE</span>
                         </a>
                     </li>
                     <li class="col-xs-12 col-md-3 col-lg-3 final_foot">
-                        <a href="">
+                        <a href="news.html">
                             <h4 class="ws">什么是激光汽化切割加工</h4>
                             <p class="ws">随着科技的不断进步，关于激光切割加工的种类变得越来越多了。相信大家也不一定听说过所有的种......</p>
                             <span class="bews-more">MORE</span>
                         </a>
                     </li>
                     <li class="col-xs-12 col-md-3 col-lg-3 final_foot">
-                        <a href="">
+                        <a href="news.html">
                             <h4 class="ws">概念上钣金与冲压的区别</h4>
                             <p class="ws">对于初次接触钣金加工的人来说，绝大多数的人混淆钣金加工与冲压加工的概念，虽然这两者都有着许多相......</p>
                             <span class="bews-more">MORE</span>
@@ -216,32 +216,9 @@
             </div>
         </div>
     </div>
-    <ul id="menu" class="mfb-component--br mfb-zoomin" data-mfb-toggle="hover">
-        <li class="mfb-component__wrap">
-            <a href="#" class="mfb-component__button--main">
-                <i class="mfb-component__main-icon--resting ion-plus-round"></i>
-                <i class="mfb-component__main-icon--active ion-close-round"></i>
-            </a>
-            <ul class="mfb-component__list">
-                <li>
-                    <a href="#" data-mfb-label="View on Github" class="mfb-component__button--child">
-                        <i class="mfb-component__child-icon ion-social-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" data-mfb-label="Follow me on Github" class="mfb-component__button--child">
-                        <i class="mfb-component__child-icon ion-social-octocat"></i>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="#" data-mfb-label="Share on Twitter" class="mfb-component__button--child">
-                        <i class="mfb-component__child-icon ion-social-twitter"></i>
-                    </a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+
+    
 <script src="js/jquery-1.11.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/cp.js"></script>
